# Project-NUEVO

./: .gitignore  COMMUNICATION_PROTOCOL.md
TLV protocol/: TLV_Payloads.md  TLV_TypeDefs.json  generate_tlv_types.py
firmware/: README.md  pin_table_rev_A.md  pin_table_rev_B.md
firmware/arduino/: arduino.ino
firmware/arduino/src/: Scheduler.cpp  Scheduler.h  SystemManager.cpp  config.h  pins.h  utility.cpp
firmware/docs/: REV_A_TO_REV_B_CHANGES.md  TIMER3_CONFLICT_ANALYSIS.md  architecture.md  communication_and_state.md  motion_control.md  pin_table_rev_A.md  pin_table_rev_B.md  sensors_and_i2c.md  technical_notes.md
firmware/notes/: REV_A_TO_REV_B_CHANGES.md  TIMER3_CONFLICT_ANALYSIS.md  technical_notes.md
firmware/tests/: README.md
firmware/tests/test_dc_motor_pwm/: test_dc_motor_pwm.ino
firmware/tests/test_eeprom/: src  test_eeprom.ino
firmware/tests/test_encoder/: test_encoder.ino
firmware/tests/test_stepper/: test_stepper.ino
nuevo_ui/backend/nuevo_bridge/: mag_calibration.py  ros2_node.py
nuevo_ui/frontend/src/: App.tsx
ros2_ws/: README.md
ros2_ws/docker/: Dockerfile  Dockerfile.bridge  Dockerfile.robot  docker-compose.rpi.yml  docker-compose.vm.yml  enter_ros2.sh  entrypoint.bridge.sh
ros2_ws/src/global_gps/: README.md
ros2_ws/src/nuevo_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/nuevo_msgs/msg/: DCMotorStatus.msg  DCStatusAll.msg  IOStatus.msg  MagCalCmd.msg  MagCalStatus.msg  MotorVelocities.msg  ServoChannelStatus.msg  ServoCommand.msg  ServoStatusAll.msg  StepCommand.msg  StepStatusAll.msg  StepperStatus.msg  SysCommand.msg  SystemStatus.msg  Voltage.msg
ros2_ws/src/robot/: setup.cfg
(+59 files in other folders)
